@@ -18,6 +18,7 @@ Engine fixes:
 * Fixed stat bars not having any fill when the value they were representing was non-zero. Now they will always show at least 1 pixel of the bar's fill graphics.
 * Fixed a bug where the game window could be resized below the minimum size after exiting fullscreen mode.
 * Removed the default resolution scaling when virtual_heights is undefined.
+* Improved performance when checking map event hotspots.
 
 Game updates:
 
